style.css
@import url('https://fonts.googleapis.com/css2?family=Rye&family=Work+Sans&display=swap');
/*
Color pallette::
  #433a3f -> black coffee (deep brown)
  #c8553d -> cedar chest (dark orange)
  #deb887 -> burlywood (light brown)
*/

*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Work Sans', sans-serif;
  text-align: center;
  align-content: center;

  background-color: #deb887;
  color: #433A3F;
}

.nav-bar {
  background-color: antiquewhite;
  padding: 0;
}

h1 {
  font-family: 'Rye', cursive;
  font-size: 50px;
}

p {
  font-size: 20px;
}

.buttons {
  width: 100%;
  text-align: center;
}

.btn {
  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24);  background-color: #c8553d;
  text-align: center;
  display:inline-block;
  text-decoration: none !important;
  margin:0 auto;
  width: 50%;
  /*float: left;*/
  display:flex;
  flex-direction: column;
  align-items: center;
}

a {
  text-decoration: none;
  color: white;

  font-size: 20px;
  padding: 14px 40px;
  border-radius: 4px;
}

.footer-img {
  width: 100px;
  height: auto;

  position: absolute;
  bottom: 10px;
}

div.gallery {
  border: 1px solid #ccc;
}

div.gallery:hover {
  border: 1px solid #777;
}

div.gallery img {
  height: auto;
}

div.desc {
  padding: 15px;
  text-align: center;
}

* {
  box-sizing: border-box;
}

.responsive {
  padding: 0 6px;
  float: left;
  width: 24.99999%;
}

@media only screen and (max-width: 700px) {
  .responsive {
    width: 49.99999%;
    margin: 6px 0;
  }
}

@media only screen and (max-width: 500px) {
  .responsive{
    width: 100%;
  }
}

.clearfix:after {
  content: "";
  display: table;
  clear: both;
}

/*background animation*/
@-webkit-keyframes emotes-fall{0%{top:-10%}100%{top:100%}}
@-webkit-keyframes emotes-shake{0%,100%{-webkit-transform:translateX(0);transform:translateX(0)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}}
@keyframes emotes-fall{0%{top:-10%}100%{top:100%}}
@keyframes emotes-shake{0%,100%{transform:translateX(0)}50%{transform:translateX(80px)}}.leaves{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;cursor:default;-webkit-animation-name:emotes-fall,emotes-shake;-webkit-animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:emotes-fall,emotes-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.leaves:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.leaves:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.leaves:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.leaves:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.leaves:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.leaves:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.leaves:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.leaves:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.leaves:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.leaves:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}.leaves:nth-of-type(10){left:25%;-webkit-animation-delay:2s,0s;animation-delay:2s,0s}.leaves:nth-of-type(11){left:65%;-webkit-animation-delay:4s,2.5s;animation-delay:4s,2.5s}

